# pyshgp

./: .coveragerc  .gitignore  LICENSE  LICENSE.md  README.md  README.rst  ROADMAPS.md  TODO.md  Testing.py  circle.yml  old-README.md-old  plush_gene.py  profiler_log.txt  pyproject.toml  pysh_deap_tools.py  pysh_globals.py  pysh_instruction.py  pysh_interpreter.py  pysh_plush_translation.py  pysh_random.py  pysh_simplification.py  pysh_stack.py  pysh_state.py  pysh_stats  pysh_tools.py  pysh_utils.py  pyshgp_cli.py  registered_instructions.py  reinstall.sh  requirements-dev.txt  requirements-with-dev.txt  requirements.txt  setup.cfg  setup.py  temp.py  text_me.json  time  tox.ini  uninstall_setuptools.sh  uninstall_via_setuptools.sh
.circleci/: config.yml  old_config.yml
Testing Stuff/: KnapsackData.csv  KnapsackPlotting.Rmd  KnapsackPlotting.html  Thoughts.txt  knapsack.py  multiplexer_lexicase.py  multiplexer_lexicase_log.csv  multiplexer_lexicase_log_2.csv  multiplexer_plotting.R  multiplexer_tournament.py  multiplexer_tournament_log.csv  multiplexer_tournament_log_2.csv  my_deap_ga.py  parity_lexicase.py
benchmark/: fly-template.alf  launch-runs.py
deploy/: deploy_setup.sh  prepare_release.sh  run_examples.sh  save_instruction_docs.py
docs/: Evolutionary_Parameters.rst  Examples.rst  Genetic_Operators.rst  Input_Output_Instr.rst  Instructions.rst  Integer_Regression.rst  Makefile  Odd.rst  Programs_V_Genomes.rst  Push_GP.rst  Sextic.rst  Simplification.rst  auto_instructions.rst  conf.py  contributing.html  contributing.rst  custom_instructions.html  index.rst  (+14 more)
(+665 files in other folders)
